tests/typecheck/should_fail/T16517.hs
{-# LANGUAGE PolyKinds #-}
module T16517 where

import Data.Proxy
class C a where m :: Proxy (a :: k)
