tests/typecheck/should_fail/T16517.stderr

T16517.hs:5:29: error: [GHC-25897]
    • Expected kind ‘k1’, but ‘a’ has kind ‘k’
      ‘k1’ is a rigid type variable bound by
        the type signature for ‘m’
        at T16517.hs:5:22-35
      ‘k’ is a rigid type variable bound by
        the class declaration for ‘C’
        at T16517.hs:5:22-35
    • In the first argument of ‘Proxy’, namely ‘(a :: k)’
      In the type signature: m :: Proxy (a :: k)
      In the class declaration for ‘C’
